# model_armor_poc

./: .gitignore  README.md  pyproject.toml
customer_support/: __init__.py  agent.py  eval_set_v2.evalset.json  generated.evalset.json  model_armor.py  service.py  test_agent.py  test_agent_v2.py  test_config.json  test_model_armor_integration.py  test_model_armor_unit.py  test_service_unit.py
