[project]
name = "model-armor-poc"
version = "0.1.0"
description = "PoC for Model Amor"
readme = "README.md"
authors = [
    { name = "Eli Tavares" }
]
requires-python = ">=3.12"
dependencies = [
    "google-adk[eval]==1.31.0",
    "google-genai==1.73.1",
    "google-cloud-modelarmor==0.5.0",
    "google-cloud-aiplatform==1.148.1",
    "pytest==9.0.3",
    "fastapi==0.136.0",
    "uvicorn==0.44.0",
    "pydantic>=2.9.0",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.3",
    "pytest-asyncio>=1.3.0",
]
[tool.setuptools]
package-dir = {"" = "../.."}
packages = ["customer_support"]

[tool.pytest.ini_options]
pythonpath = ["..", "."]
python_files = ["test_*.py"]
